<resources>
    <string name="app_name">Remind Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">Do not have account? create one.</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="dashboard">Dashboard</string>
    <string name="title">Title</string>
    <string name="history">History</string>
    <string name="sendmail">sendmail</string>
</resources>
